--- a/styles/style.less
+++ b/styles/style.less
@@ -1,5 +1,8 @@
+// Import des fichiers variables.less et mixins.less
 @import "variables.less";
 @import "mixins.less";
+
+// Import du font sur google font
 @import url("https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700&display=swap");
 
 // Map
@@ -49,6 +52,7 @@ a {
   text-decoration: none;
 }
 
+// Navigation
 header {
   width: 100%;
   height: 10%;
@@ -88,6 +92,7 @@ header {
   }
 }
 
+// Corps du projet
 main {
   width: 100%;
   height: 82%;
@@ -96,6 +101,7 @@ main {
 
   // Page Liste article
   .liste-article-position {
+    // Utilisation d'une mixins
     .absolute-position-center();
 
     .articles-image {
@@ -270,7 +276,7 @@ main {
       border-width: 3px;
       border-image-slice: 1;
     }
-    /* reset input */
+    // Reset input
     .form__field {
       &:required,
       &:invalid {
@@ -393,6 +399,7 @@ main {
   }
 }
 
+// Pied de page
 footer {
   width: 100%;
   height: 8%;
