--- a/styles/style.less
+++ b/styles/style.less
@@ -20,6 +20,7 @@
   color: @black;
 }
 
+// Function Each
 @sizes: range(10px, 60px, 10);
 
 each(@sizes, {
@@ -110,7 +111,7 @@ main {
 
     .mascotte-position {
       position: relative;
-      left: -200px;
+      left: -100px;
     }
 
     .circle-mascotte {
@@ -126,9 +127,12 @@ main {
     }
 
     li {
+      position: relative;
+      left: 50px;
       list-style: none;
       font-size: @big-text;
       padding: 40px 0;
+      width: 480px;
     }
 
     .liste-article {
@@ -142,7 +146,7 @@ main {
     .search-bar {
       position: absolute;
       top: 30px;
-      left: 460px;
+      left: 590px;
       padding: 10px 0 10px 10px;
       width: 300px;
       border-radius: 6px;
@@ -162,23 +166,85 @@ main {
       margin-top: 40px;
     }
 
-    .corps-article {
-      width: 45%;
+    .corps-article-infos {
+      width: 65%;
       text-align: left;
       margin: 0 auto;
     }
 
-    .auteur {
-      text-align: center;
-      margin-top: 20px;
-      margin-left: -530px;
-      font-style: italic;
+    .categorie {
+      font-size: @paragraph;
       font-weight: bold;
+    }
+
+    .corps-article {
+      color: @white;
+      margin-top: 20px;
+    }
+
+    .auteur {
+      margin-top: 20px;
+      margin-bottom: 10px;
+      font-style: italic;
+      font-weight: 400;
+    }
+
+    .position-image-article {
+      text-align: center;
+    }
+
+    .image-article {
+      height: 250px;
+      margin-top: 20px;
+    }
+
+    .article-actuel {
+      position: absolute;
+      bottom: 105px;
+    }
+
+    .source {
+      position: relative;
+      color: @rose;
+
+      &::after {
+        content: "";
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        width: 0%;
+        height: 1px;
+        background: @rose;
+        transition: 0.3s ease-in-out;
+      }
+
+      &:hover::after {
+        width: 100%;
+      }
+    }
+
+    .connexe {
+      float: right;
+      margin-left: 15px;
+      margin-right: 15px;
+
+      a {
+        color: @white;
+
+        &:hover {
+          color: @rose;
+        }
+      }
+
+      span {
+        font-weight: bold;
+      }
     }
   }
 
   // Page About
   .about {
+    // Utilisation d'une mixins
     .absolute-position-center();
     margin-top: 35px;
 
@@ -206,15 +272,6 @@ main {
         height: 2px;
         background: @rose;
       }
-    }
-  }
-
-  // Page article view
-  .article-view {
-    color: @white;
-
-    a {
-      color: @rose;
     }
   }
 
@@ -312,12 +369,19 @@ main {
   }
 
   .select-position {
+    display: flex;
+    align-items: center;
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
     margin-top: 20px;
 
+    p {
+      margin-right: 20px;
+    }
+
     .select {
+      margin-left: 20px;
       position: relative;
       display: flex;
       width: 15em;
@@ -396,6 +460,69 @@ main {
 
   .back-button {
     cursor: pointer;
+    margin-left: 8px;
+  }
+
+  h1 {
+    text-align: center;
+    margin-top: 40px;
+  }
+
+  .corps-article-infos {
+    width: 65%;
+    text-align: left;
+    margin: 0 auto;
+  }
+
+  .categorie {
+    font-size: @paragraph;
+    font-weight: bold;
+  }
+
+  .corps-article {
+    color: @white;
+    margin-top: 20px;
+  }
+
+  .auteur {
+    margin-top: 20px;
+    margin-bottom: 10px;
+    font-style: italic;
+    font-weight: 400;
+  }
+
+  .position-image-article {
+    text-align: center;
+  }
+
+  .image-article {
+    height: 250px;
+    margin-top: 20px;
+  }
+
+  .article-actuel {
+    position: absolute;
+    bottom: 105px;
+  }
+
+  .source {
+    position: relative;
+    color: @rose;
+
+    &::after {
+      content: "";
+      position: absolute;
+      left: 0;
+      bottom: 0;
+      width: 0%;
+      height: 1px;
+      background: @rose;
+      transition: 0.3s ease-in-out;
+    }
+
+    &:hover::after {
+      width: 100%;
+    }
   }
 }
 
@@ -409,6 +536,7 @@ footer {
   .footer-text {
     width: 100%;
     height: 100%;
+    // Utilisation d'une mixins
     .flex-position();
   }
 }
